# osmo_tactile_glove

./: .gitignore  README.md  README_archive.md  index.html
firmware/BowieGlove/: .cproject  .mxproject  .project  BowieGlove Debug.launch  BowieGlove.elf  BowieGlove.ioc  CMakeLists.txt
firmware/BowieGlove/Core/: BowieGlove_DebugHelper.elf
firmware/BowieGlove/Core/Inc/: main.h  stm32f4xx_it.h
firmware/BowieGlove/Core/Inc/comms/: bowie.pb.h  cobs.h
firmware/BowieGlove/Core/Inc/glove/: bhi360.h  common.h  glove.h
firmware/BowieGlove/Core/Inc/usb/: tusb_config.h  usb_descriptors.h
firmware/BowieGlove/Core/Src/: gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usb_otg.c
firmware/BowieGlove/Core/Src/comms/: bowie.pb.c  bowie.proto
firmware/BowieGlove/Core/Src/glove/: bhi360.c  common.c  glove.c
firmware/BowieGlove/Core/Startup/: startup_stm32f446retx.s
firmware/BowieGlove/Debug/: BowieGlove.elf  BowieGlove.list  BowieGlove.map  BowieGlove_base.elf  makefile  objects.list  sources.mk
firmware/BowieGlove/Debug/Core/: subdir.mk
firmware/BowieGlove/Debug/Core/Src/: freertos.d  i2c.cyclo  i2c.su  main.cyclo  main.d  main.su  sdio.d  sdio.su  stm32f4xx_hal_timebase_tim.d  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d  tim.cyclo  tim.d  usb_otg.d
firmware/BowieGlove/Debug/Core/Src/comms/: bowie.pb.d  cobs.cyclo  cobs.d  cobs.su  subdir.mk
firmware/BowieGlove/Debug/Core/Src/comms/protobuf/: pb_common.cyclo  pb_common.d  pb_decode.cyclo  pb_decode.d  pb_encode.cyclo  pb_encode.d  pb_encode.su  subdir.mk
firmware/BowieGlove/Debug/Core/Src/glove/: bhi360.cyclo  bhi360.d  bhi360.su  common.cyclo  common.d  common.su  glove.cyclo  glove.d  glove.su  subdir.mk
firmware/BowieGlove/Debug/Core/Src/usb/: subdir.mk  usb_descriptors.d  usb_dfu_rt.d  usb_dfu_rt.su
firmware/BowieGlove/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_cortex.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_pcd.d  stm32f4xx_hal_rcc.d  stm32f4xx_ll_sdmmc.d  subdir.mk
firmware/BowieGlove/Debug/Drivers/bhy2/: bhi3.d  bhi3_multi_tap.cyclo  bhy2.cyclo  bhy2.su  bhy2_bsec.cyclo  bhy2_bsec.d  bhy2_bsec.su  bhy2_head_tracker.cyclo  bhy2_head_tracker.su  bhy2_hif.cyclo  bhy2_hif.d  bhy2_hif.su  bhy2_parse.d  bhy2_swim.d  bhy2_swim.su  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/: subdir.mk  tusb.cyclo  tusb.d  tusb.su
firmware/BowieGlove/Debug/tinyusb/src/class/audio/: audio_device.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/class/bth/: bth_device.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/class/cdc/: cdc_device.cyclo  cdc_device.d  cdc_device.su  cdc_host.d  cdc_rndis_host.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/class/dfu/: dfu_device.d  dfu_rt_device.d  dfu_rt_device.su  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/class/hid/: hid_device.d  hid_host.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/class/midi/: midi_device.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/class/msc/: msc_device.d  msc_host.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/class/net/: ecm_rndis_device.d  ncm_device.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/class/usbtmc/: subdir.mk  usbtmc_device.d
firmware/BowieGlove/Debug/tinyusb/src/class/video/: subdir.mk  video_device.d
firmware/BowieGlove/Debug/tinyusb/src/common/: subdir.mk  tusb_fifo.d
firmware/BowieGlove/Debug/tinyusb/src/device/: subdir.mk  usbd.cyclo  usbd.d  usbd.su  usbd_control.d
firmware/BowieGlove/Debug/tinyusb/src/host/: hub.d  subdir.mk  usbh.d
firmware/BowieGlove/Debug/tinyusb/src/portable/bridgetek/ft9xx/: dcd_ft9xx.d  (+1 more)
firmware/BowieGlove/Debug/tinyusb/src/portable/ehci/: ehci.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/portable/ohci/: ohci.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/portable/sunxi/: dcd_sunxi_musb.d  subdir.mk
firmware/BowieGlove/Debug/tinyusb/src/portable/template/: dcd_template.d  subdir.mk
firmware/BowieGlove/Drivers/bhy2/: bhy2.h  bhy2_hif.c
firmware/BowieGlove/Drivers/bhy2/firmware/bhi360/: Bosch_Shuttle3_BHI360_BMM350C_BME688_RawData.fw  Bosch_Shuttle3_BHI360_BMM350C_Meta.fw  Bosch_Shuttle3_BHI360_BMM350C_Poll.fw.h  Bosch_Shuttle3_BHI360_BMM350C_Poll_Meta.fw.h
firmware/BowieGlove/Drivers/bhy2/firmware/bhi360/latest/: Bosch_Shuttle3_BHI360_BMM350C_Poll_Meta_latest.fw.h
firmware/BowieGlove/Drivers/bhy2/firmware/bhi360/latest_10_29/: Bosch_Shuttle3_BHI360_BMM350C_Poll_Meta_10_29.fw.h
firmware/BowieGlove/Drivers/bhy2/firmware/bhi360/latest_11_13/: Bosch_Shuttle3_BHI360_BMM350C_Poll_Meta_12.fw.h
firmware/BowieGlove/Drivers/bhy2/firmware/bhi360/new_version/: Bosch_Shuttle3_BHI360_BMM350C_BME688_RawData.fw.h  Bosch_Shuttle3_BHI360_BMM350C_Meta.fw.h  Bosch_Shuttle3_BHI360_BMM350C_Poll_Meta.fw.h
firmware/BowieGlove/Drivers/bhy2/firmware/bhi360/racing/: Bosch_Shuttle3_BHI360_BMM350C_Poll_Meta.fw.h
(+460 files in other folders)
